added text styles and background colors and background images

--- a/source/directions.html
+++ b/source/directions.html
@@ -13,7 +13,7 @@
     <div class="container">
       <span class="page-header__text-logo">Погнали?</span>
       <a class="page-header__logo visually-hidden">
-        <img class="logo" src="img/logo.svg" width="226" height="30" alt="Логотип" />
+        <img class="logo" src="img/logo.png" width="226" height="30" alt="Логотип" />
       </a>
       <nav class="main-nav">
         <button class="main-nav__toggle button button--togle" type="button">
@@ -22,13 +22,13 @@
 
         <ul class="main-nav__list site-list">
           <li class="site-list__item">
-            <a class="site-list__link" href="index.html">О СЕРВИСЕ</a>
+            <a class="text site-list__link" href="index.html">О СЕРВИСЕ</a>
           </li>
           <li class="site-list__item">
-            <a class="site-list__link" href="#">НАПРАВЛЕНИЯ</a>
+            <a class="text site-list__link" href="#">НАПРАВЛЕНИЯ</a>
           </li>
           <li class="site-list__item">
-            <a class="site-list__link" href="companions.html">ПОПУТЧИКИ</a>
+            <a class="text site-list__link" href="companions.html">ПОПУТЧИКИ</a>
           </li>
         </ul>
       </nav>
@@ -43,13 +43,13 @@
             <dt class="icon-list__phone">
               <span class="icon-list__link icon icon--dark-theme icon--home-phone">Позвоните нам</span>
             </dt>
-            <dd class="icon-list__details">8 800 555-86-28</dd>
+            <dd class="text icon-list__details">8 800 555-86-28</dd>
           </div>
           <div class="icon-list__item">
             <dt class="icon-list__email">
               <span class="icon-list__link icon icon--dark-theme icon--mail">Напишите нам</span>
             </dt>
-            <dd class="icon-list__details">MAIL@HTMLACADEMY.RU</dd>
+            <dd class="text icon-list__details">MAIL@HTMLACADEMY.RU</dd>
           </div>
         </dl>
         <ul class="page-header__list social-list">
@@ -82,7 +82,7 @@
             <b class="general-info__level-number">80</b>
             level
           </div>
-          <img class="general-info__avatar" src="../img/deminavatar.svg" alt="Фотография Демина" />
+          <img class="general-info__avatar" src="../img/demin-photo.png" alt="Фотография Демина" />
           <button class="general-info__change-photo button button--light-theme">СМЕНИТЬ ФОТО</button>
           <fieldset class="dataset">
             <legend class="dataset__legend">ТЭГИ</legend>
@@ -222,7 +222,7 @@
                     <option class="select__item" selected>Босния и Герцеговина</option>
                   </select>
                   <p class="select-input-list__dot-image select-input-list__dot-image--active">.</p>
-                  <img src="../img/bosniaherzegovinaflag.svg" class="select-input-list__flag" alt="Флаг страны" />
+                  <img src="../img/bosnia-and-herzegovina-flag.png" class="select-input-list__flag" alt="Флаг страны" />
                   <sup class="select-input-list__remove-country">x</sup>
                 </li>
                 <li class="select-input-list__item">
@@ -243,7 +243,7 @@
                     <option class="select__item" selected>Чехия</option>
                   </select>
                   <p class="select-input-list__dot-image select-input-list__dot-image--active">.</p>
-                  <img src="../img/czechflag.svg" class="select-input-list__flag" alt="Флаг страны" />
+                  <img src="../img/czech-flag.png" class="select-input-list__flag" alt="Флаг страны" />
                 </li>
                 <li class="select-input-list__item">
                   <select class="select-input-list select">
@@ -279,14 +279,14 @@
                   <h4 class="country-description-list__caption">
                     Босния и Герцеговина
                   </h4>
-                  <img src="../img/bosniaherzegovinaflag.svg" class="select-input-list__flag" alt="Флаг страны" />
+                  <img src="../img/bosnia-and-herzegovina-flag.png" class="select-input-list__flag" alt="Флаг страны" />
                   <textarea class="country-description-list__change-text" placeholder="План действий"></textarea>
                 </li>
                 <li class="country-description-list__item">
                   <h4 class="country-description-list__caption">
                     Чехия
                   </h4>
-                  <img src="../img/czechflag.svg" class="select-input-list__flag" alt="Флаг страны" />
+                  <img src="../img/czech-flag.png" class="select-input-list__flag" alt="Флаг страны" />
                   <textarea class="country-description-list__change-text"
                     placeholder="План действий">Пить пиво и лазить по старым замкам, наслаждаться архитектурой и вот это все.</textarea>
                 </li>
@@ -320,7 +320,19 @@
       </ul>
       <div class="page-footer__developed">
         <span class="page-footer__developed-caption">Разработано</span>
-        <img src="img/footerlogo.svg" alt="Логотип" />
+        <svg width="27" height="34" viewBox="0 0 27 34" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <g clip-path="url(#clip0)">
+            <path
+              d="M13.6426 0.101368L13.5 0.0859375L0 1.46443V25.5658L13.5 33.3892L27 25.5658V1.46443L13.6426 0.101368ZM25.2344 24.5885L13.5 31.3883L1.76561 24.5885V14.7093L13.4507 21.4834L13.4701 22.711L5.45351 18.0646L5.44295 19.2648L13.4894 23.9747L13.5088 25.2348L5.46408 20.5747L5.45351 21.7749L13.5 26.4847L21.6239 21.7509V20.5507V16.6484L25.2432 14.543L25.2344 24.5885ZM25.2344 13.2622L22.0147 15.1036L20.5325 15.9609L13.4666 11.8597L13.456 13.0599L19.4957 16.5593L19.4429 16.5901L19.3126 16.6638L18.4536 17.1456L13.4666 14.2583L13.456 15.4585L17.3921 17.7389L16.4591 18.3355L16.438 18.3475L13.4666 16.6416L13.456 17.8417L15.4029 18.9528L13.4155 20.1152L1.7973 13.3839L13.4349 6.56862L25.2344 13.2622ZM25.2344 12.062L13.4401 5.28786L1.76561 12.0552V3.01438L13.5 1.8142L25.2344 3.01438V12.062Z"
+              fill="#192144" />
+          </g>
+          <defs>
+            <clipPath id="clip0">
+              <rect width="27" height="33.3033" fill="white" transform="translate(0 0.0859375)" />
+            </clipPath>
+          </defs>
+        </svg>
+
       </div>
     </div>
   </footer>
