--- a/source/index.html
+++ b/source/index.html
@@ -28,7 +28,7 @@
         </svg>
       </a>
     </div>
-    <div class="main-menu ">
+    <div class="main-menu visually-hidden">
       <nav class="main-nav">
         <ul class="main-nav__list site-list">
           <li class="site-list__item">
