added header styles

--- a/source/companions.html
+++ b/source/companions.html
@@ -10,8 +10,10 @@
 <body class="page__body">
   <header class="page-header">
     <div class="container">
-      <span class="page-header__text-logo">Погнали?</span>
-      <a class="page-header__logo visually-hidden">
+      <a href="index.html" class="page-header__logo-mobile">
+        <img class="logo" src="img/logo-mobile.png" width="226" height="30" alt="Погнали?" />
+      </a>
+      <a href="index.html" class="page-header__logo">
         <img class="logo" src="../img/logo.png" width="226" height="30" alt="Логотип" />
       </a>
       <nav class="main-nav">
