--- a/source/index.html
+++ b/source/index.html
@@ -10,8 +10,10 @@
 <body class="page__body">
   <header class="page-header page-header__menu-opened">
     <div class="container page-header__menu">
-      <span class="page-header__text-logo">Погнали?</span>
-      <a class="page-header__logo visually-hidden">
+      <a href="#" class="page-header__logo-mobile">
+        <img class="logo" src="img/logo-mobile.png" width="226" height="30" alt="Погнали?" />
+      </a>
+      <a href="#" class="page-header__logo">
         <img class="logo" src="img/logo.png" width="226" height="30" alt="Логотип" />
       </a>
       <a class="main-nav__toggle">
@@ -28,11 +30,12 @@
         </svg>
       </a>
     </div>
-    <div class="main-menu visually-hidden">
+    <div class="main-menu">
+      <!-- visually-hidden -->
       <nav class="main-nav">
         <ul class="main-nav__list site-list">
           <li class="site-list__item">
-            <a class="text site-list__link" href="index.html">О СЕРВИСЕ</a>
+            <a class="text site-list__link" href="#">О СЕРВИСЕ</a>
           </li>
           <li class="site-list__item">
             <a class="text site-list__link" href="directions.html">НАПРАВЛЕНИЯ</a>
