--- a/source/index.html
+++ b/source/index.html
@@ -574,7 +574,8 @@
   </main>
   <footer class="page-footer">
     <div class="container">
-      <h2 class="page-footer__caption">Погнали?</h2>
+      <h2 class="visually-hidden">Погнали?</h2>
+      <img src="img/logo-mobile-dark.png" class="page-footer__logo" alt="Логотип" />
       <ul class="page-footer__list social-list">
         <li class="social-list__item">
           <a class="social-list__link icon icon--dark-blue" href="https://www.facebook.com/htmlacademy">
@@ -623,7 +624,6 @@
             </clipPath>
           </defs>
         </svg>
-
       </div>
     </div>
   </footer>
