--- a/source/index.html
+++ b/source/index.html
@@ -377,7 +377,7 @@
           </li>
           <li class="card-list__item">
             <div class="card-list__card">
-              <img class="card-list__photo" src="img/demin-photo-big.png" alt="Фото Петра Демина" />
+              <img class="card-list__photo" src="img/demin-photo.png" alt="Фото Петра Демина" />
               <div class="users__level ">
                 <b class="text users__level-number">80</b>
                 <span class="text users__level-text">level</span>
