--- a/source/directions.html
+++ b/source/directions.html
@@ -123,7 +123,7 @@
             <img class="general-info__avatar" src="img/demin-avatar.png" alt="Фотография Демина" />
           </div>
           <button class="general-info__change-photo button button--light-theme">
-            <sapn class="general-info__user-data-text text">СМЕНИТЬ ФОТО</sapn>
+            <span class="general-info__user-data-text text">СМЕНИТЬ ФОТО</span>
           </button>
           <fieldset class="dataset">
             <legend class="dataset__legend text">ТЭГИ</legend>
