--- a/source/index.html
+++ b/source/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="css/style.css" rel="stylesheet">
   <title>Погнали!</title>
 </head>
@@ -575,7 +576,12 @@
   <footer class="page-footer">
     <div class="container">
       <h2 class="visually-hidden">Погнали?</h2>
-      <img src="img/logo-mobile-dark.png" class="page-footer__logo" alt="Логотип" />
+      <a href="#" class="page-footer__logo-mobile">
+        <img class="logo" src="img/logo-mobile.png" width="226" height="30" alt="Погнали?" />
+      </a>
+      <a href="#" class="page-footer__logo">
+        <img class="logo" src="img/logo.png" width="226" height="30" alt="Логотип" />
+      </a>
       <ul class="page-footer__list social-list">
         <li class="social-list__item">
           <a class="social-list__link icon icon--dark-blue" href="https://www.facebook.com/htmlacademy">
