--- a/source/companions.html
+++ b/source/companions.html
@@ -964,10 +964,10 @@
   <footer class="page-footer">
     <div class="container">
       <h2 class="visually-hidden">Погнали?</h2>
-      <a href="img/logo-mobile.png" class="page-footer__logo-mobile">
+      <a href="index.html" class="page-footer__logo-mobile">
         <img class="logo" src="img/logo-mobile.png" width="226" height="30" alt="Погнали?" />
       </a>
-      <a href="img/logo-mobile.png" class="page-footer__logo">
+      <a href="index.html" class="page-footer__logo">
         <img class="logo" src="img/logo.png" width="226" height="30" alt="Логотип" />
       </a>
       <ul class="page-footer__list social-list">
