added correct logo images to footer

--- a/source/index.html
+++ b/source/index.html
@@ -577,7 +577,7 @@
     <div class="container">
       <h2 class="visually-hidden">Погнали?</h2>
       <a href="#" class="page-footer__logo-mobile">
-        <img class="logo" src="img/logo-mobile.png" width="226" height="30" alt="Погнали?" />
+        <img class="logo" src="img/logo-mobile-dark.png" width="226" height="30" alt="Погнали?" />
       </a>
       <a href="#" class="page-footer__logo">
         <img class="logo" src="img/logo.png" width="226" height="30" alt="Логотип" />
