added media queries to footer

--- a/source/directions.html
+++ b/source/directions.html
@@ -427,7 +427,7 @@
     </form>
   </main>
   <footer class="page-footer">
-    <div class="container">
+    <div class="page-footer__container">
       <h2 class="visually-hidden">Погнали?</h2>
       <a href="index.html" class="page-footer__logo-mobile">
         <img class="logo" src="img/logo-mobile-dark.png" width="226" height="30" alt="Погнали?" />
