--- a/source/index.html
+++ b/source/index.html
@@ -574,7 +574,7 @@
     </section>
   </main>
   <footer class="page-footer">
-    <div class="container">
+    <div class="page-footer__container container">
       <h2 class="visually-hidden">Погнали?</h2>
       <a href="#" class="page-footer__logo-mobile">
         <img class="logo" src="img/logo-mobile-dark.png" width="226" height="30" alt="Погнали?" />
