added some media queries to index page

--- a/source/index.html
+++ b/source/index.html
@@ -31,7 +31,7 @@
         </svg>
       </a>
     </div>
-    <div class="main-menu">
+    <div class="main-menu visually-hidden ">
       <!-- visually-hidden -->
       <nav class="main-nav">
         <ul class="main-nav__list site-list">
@@ -114,8 +114,7 @@
     <section class="promo">
       <div class="container">
         <header class="promo__header">
-          <h2 class="text promo__slogan">В путешествие с крутыми попутчиками!</h2>
-          <img class="promo__traveller-icon" src="img/traveller-illustration.png" alt="Путешественник">
+          <h2 class="promo__slogan text">В путешествие <br>с крутыми <br>попутчиками!</h2>
           <div class="promo__actions">
             <ul class="promo__list icon-list">
               <li class="icon-list__item">
@@ -143,11 +142,16 @@
               <span class="text button__caption">АВТОРИЗАЦИЯ</span>
             </a>
           </div>
+          <div class="promo__quote">
+            <img class="promo__traveller-icon" src="img/traveller-illustration.png" alt="Путешественник">
+            <img class="promo__traveller-icon__large" src="img/traveller-illustration-large.png" alt="Путешественник">
+            <blockquote class="promo__review">
+              <q class="text text--default">Лучшее приложение, <br> что я видел в жизни!</q>
+              <p class="promo__author-info text text--bold">Мурат Эльтазин главный редактор газеты <q>гаджет лайф</q>
+              </p>
+            </blockquote>
+          </div>
         </header>
-        <blockquote class="promo__review">
-          <q class="text text--default">Лучшее приложение, <br> что я видел в жизни!</q>
-          <p class="promo__author-info text text--bold">Мурат Эльтазин главный редактор газеты <q>гаджет лайф</q></p>
-        </blockquote>
         <ol class="promo__list promo__list--indent information-list">
           <li class="information-list__item information-list__item--dark-theme">
             <span class="text information-list__description">Выберите направление</span>
