--- a/source/index.html
+++ b/source/index.html
@@ -31,8 +31,7 @@
         </svg>
       </a>
     </div>
-    <div class="main-menu visually-hidden ">
-      <!-- visually-hidden -->
+    <div class="main-menu visually-hidden">
       <nav class="main-nav">
         <ul class="main-nav__list site-list">
           <li class="site-list__item">
@@ -152,32 +151,42 @@
             </blockquote>
           </div>
         </header>
-        <ol class="promo__list promo__list--indent information-list">
+        <ul class="promo__list promo__list--indent information-list">
           <li class="information-list__item information-list__item--dark-theme">
             <span class="text information-list__description">Выберите направление</span>
+            <span>1</span>
           </li>
           <li class="information-list__item information-list__item--middle-theme">
             <span class="text information-list__description">Изучите идеи путешественников</span>
+            <span>2</span>
           </li>
           <li class="information-list__item information-list__item--light-theme">
             <span class="text information-list__description">Находите тех, кто похож на вас</span>
+            <span>3</span>
           </li>
           <li class="information-list__item information-list__item--even-lighter-theme">
             <span class="text information-list__description">Путешествуйте вместе!</span>
+            <span>4</span>
           </li>
-        </ol>
+        </ul>
       </div>
     </section>
     <section class="about">
       <div class="about__container">
         <h2 class="text text--caption">О сервисе</h2>
-        <p class="page-header__description text text--default">
+        <p class="about__description text text--default">
           Любое путешествие веселее с попутчиками, которые на одной волне с тобой! Делитесь своими идеями путешествий и
           черпайте вдохновение в чужих.
         </p>
-        <p>
-          <b class="text text--bold">А если найдете кого-то близкого по духу — скорее зовите в совместный трип!</b>
+        <p class="about__description text text--bold">
+          А если найдете кого-то близкого по духу — скорее зовите в совместный трип!
         </p>
+        <button class="about__details button button--arrow">
+          <span class="button__caption">Подробнее</span>
+          <svg width="10" height="18" viewBox="0 0 10 18" xmlns="http://www.w3.org/2000/svg">
+            <path d="M10 8.89478L0.25 17.555L0.25 0.234521L10 8.89478Z" />
+          </svg>
+        </button>
       </div>
     </section>
     <section class="countries">
@@ -281,10 +290,7 @@
           <img class="users__back-photo" src="img/smolov-back-desktop.png" alt="Фотографи Смолова" />
           <img src="img/back.svg" alt="Фоновое изображение" />
           <p class="users__description text text--default">Все мы индивидуальны и у каждого свой взгляд на идеальный
-            отдых. Одному нужен
-            пляж и
-            коктейль, а другому
-            маршрут для хайкинга. </p>
+            отдых. Одному нужен пляж и коктейль, а другому маршрут для хайкинга. </p>
           <p class="text text--bold">Теперь можно легко найти единомышленников!</p>
         </header>
         <img src="img/rogovaya-back-desktop.png" alt="Фото Роговой" />
