--- a/source/index.html
+++ b/source/index.html
@@ -14,6 +14,9 @@
       <a href="#" class="page-header__logo-mobile">
         <img class="logo" src="img/logo-mobile.png" width="226" height="30" alt="Погнали?" />
       </a>
+      <a href="#" class="page-header__logo-mobile-dark">
+        <img class="logo" src="img/logo-mobile-dark.png" width="226" height="30" alt="Погнали?" />
+      </a>
       <a href="#" class="page-header__logo">
         <img class="logo" src="img/logo.png" width="226" height="30" alt="Логотип" />
       </a>
@@ -22,14 +25,40 @@
           <rect width="25" height="3" rx="1.5" />
           <rect y="8" width="25" height="3" rx="1.5" />
         </svg>
-        <svg class="main-nave__close-icon visually-hidden" width="14" height="14" viewBox="0 0 14 14"
-          xmlns="http://www.w3.org/2000/svg">
+        <svg class="main-nav__close-icon" width="14" height="14" viewBox="0 0 14 14" xmlns="http://www.w3.org/2000/svg">
           <path d="M12.25 1.75L1.75 12.25" stroke="#192144" stroke-width="1.4" stroke-linecap="round"
             stroke-linejoin="round" />
           <path d="M1.75 1.75L12.25 12.25" stroke="#192144" stroke-width="1.4" stroke-linecap="round"
             stroke-linejoin="round" />
         </svg>
       </a>
+      <div class="page-header__actions">
+        <ul class="page-header__list icon-list">
+          <li class="icon-list__item">
+            <a class="icon-list__link">
+              <svg class="icon icon--dark-blue icon--middle-background" width="19" height="19" viewBox="0 0 19 19"
+                xmlns="http://www.w3.org/2000/svg">
+                <path
+                  d="M9.77429 8.22389C9.77429 8.41289 9.92792 8.56139 10.1157 8.56139C10.5048 8.56139 10.8189 8.87526 10.8189 9.25664C10.8189 9.44226 10.9725 9.59414 11.1603 9.59414C11.348 9.59414 11.5017 9.44226 11.5017 9.25664C11.5017 8.50064 10.8804 7.88639 10.1157 7.88639C9.92792 7.88639 9.77429 8.03827 9.77429 8.22389ZM15.332 9.59414C15.5231 9.59414 15.6733 9.44226 15.6733 9.25664C15.6733 6.22589 13.1813 3.76215 10.1157 3.76215C9.92792 3.76215 9.77429 3.914 9.77429 4.09965C9.77429 4.28527 9.92792 4.43715 10.1157 4.43715C12.8057 4.43715 14.9906 6.60051 14.9906 9.25664C14.9906 9.44226 15.1442 9.59414 15.332 9.59414Z" />
+                <path
+                  d="M12.9047 9.25661C12.9047 9.44223 13.0583 9.59411 13.2461 9.59411C13.4339 9.59411 13.5875 9.44223 13.5875 9.25661C13.5875 7.36324 12.0308 5.82424 10.1157 5.82424C9.9279 5.82424 9.77427 5.97612 9.77427 6.16174C9.77427 6.35074 9.9279 6.49924 10.1157 6.49924C11.6553 6.49924 12.9047 7.73786 12.9047 9.25661ZM10.1157 1.69998C9.9279 1.69998 9.77427 1.85186 9.77427 2.03748C9.77427 2.22312 9.9279 2.37498 10.1157 2.37498C13.9562 2.37498 17.0798 5.46312 17.0798 9.25661C17.0798 9.44223 17.23 9.59411 17.4212 9.59411C17.6089 9.59411 17.7626 9.44223 17.7626 9.25661C17.7626 5.0885 14.3317 1.69998 10.1157 1.69998ZM13.4509 12.8139L13.0037 13.0535C12.2493 13.4619 11.6622 14.5812 10.7312 13.7375L8.30011 11.3L6.20004 9.25661C5.14495 7.92348 6.32635 7.60623 6.73941 6.85699L6.98179 6.41825C7.25489 5.91873 7.35388 5.35849 7.27196 4.79823C7.19345 4.23799 6.93741 3.72836 6.52775 3.32336C6.02935 2.83062 5.36707 2.56062 4.66042 2.56062C3.95376 2.56062 3.28807 2.83062 2.78964 3.32336L2.61556 3.49886C1.69383 4.41012 1.588 5.97948 2.31514 7.92348C3.0013 9.77973 4.3839 11.7912 6.20004 13.5867C8.96862 16.3239 12.0513 17.9 14.2634 17.9C15.1373 17.9 15.8781 17.6536 16.4039 17.1339L16.5814 16.9584C17.0764 16.469 17.3529 15.8142 17.3563 15.1089C17.3529 14.4204 17.0695 13.7454 16.5814 13.2627C15.7587 12.4494 14.4717 12.2671 13.4509 12.8139Z" />
+              </svg>
+            </a>
+          </li>
+          <li class="icon-list__item">
+            <a class="icon-list__link icon">
+              <svg class="icon icon--dark-blue icon--dark-background" width="17" height="14" viewBox="0 0 17 14"
+                xmlns="http://www.w3.org/2000/svg">
+                <path
+                  d="M1.0166 2.32528L7.7666 6.55572C7.9934 6.69747 8.2868 6.76467 8.582 6.76467C8.8772 6.76467 9.1706 6.69747 9.3974 6.55572L16.1474 2.32528C16.5875 2.04913 17.0033 0.974976 16.196 0.974976H0.968901C0.161601 0.974976 0.577401 2.04913 1.0166 2.32528ZM16.3517 4.63842L9.3974 8.86677C9.0914 9.05367 8.8772 9.07572 8.582 9.07572C8.2868 9.07572 8.0726 9.05367 7.7666 8.86677C7.4606 8.67987 1.3469 4.94082 0.847401 4.63737C0.496401 4.42317 0.500001 4.67412 0.500001 4.86732V12.525C0.500001 12.966 1.0094 13.575 1.4 13.575H15.8C16.1906 13.575 16.7 12.966 16.7 12.525V4.86837C16.7 4.67517 16.7036 4.42422 16.3517 4.63842Z" />
+              </svg>
+            </a>
+          </li>
+        </ul>
+        <a class="promo__authorization button" href="authorization.html">
+          <span class="text button__caption">АВТОРИЗАЦИЯ</span>
+        </a>
+      </div>
     </div>
     <div class="main-menu visually-hidden">
       <nav class="main-nav">
@@ -45,12 +74,12 @@
           </li>
         </ul>
       </nav>
-      <div class="container page-header__authorisation">
+      <div class="page-header__authorisation">
         <a class="user-list__authorization button" href="authorization.html">
           <span class="text button__caption">АВТОРИЗАЦИЯ</span>
         </a>
       </div>
-      <div class="container page-header__contact-list contact-list">
+      <div class="page-header__contact-list contact-list">
         <dl class="icon-list">
           <div class="icon-list__item">
             <dt class="icon-list__phone">
@@ -114,33 +143,6 @@
       <div class="container">
         <header class="promo__header">
           <h2 class="promo__slogan text">В путешествие <br>с крутыми <br>попутчиками!</h2>
-          <div class="promo__actions">
-            <ul class="promo__list icon-list">
-              <li class="icon-list__item">
-                <a class="icon-list__link">
-                  <svg class="icon icon--dark-blue icon--middle-background" width="19" height="19" viewBox="0 0 19 19"
-                    xmlns="http://www.w3.org/2000/svg">
-                    <path
-                      d="M9.77429 8.22389C9.77429 8.41289 9.92792 8.56139 10.1157 8.56139C10.5048 8.56139 10.8189 8.87526 10.8189 9.25664C10.8189 9.44226 10.9725 9.59414 11.1603 9.59414C11.348 9.59414 11.5017 9.44226 11.5017 9.25664C11.5017 8.50064 10.8804 7.88639 10.1157 7.88639C9.92792 7.88639 9.77429 8.03827 9.77429 8.22389ZM15.332 9.59414C15.5231 9.59414 15.6733 9.44226 15.6733 9.25664C15.6733 6.22589 13.1813 3.76215 10.1157 3.76215C9.92792 3.76215 9.77429 3.914 9.77429 4.09965C9.77429 4.28527 9.92792 4.43715 10.1157 4.43715C12.8057 4.43715 14.9906 6.60051 14.9906 9.25664C14.9906 9.44226 15.1442 9.59414 15.332 9.59414Z" />
-                    <path
-                      d="M12.9047 9.25661C12.9047 9.44223 13.0583 9.59411 13.2461 9.59411C13.4339 9.59411 13.5875 9.44223 13.5875 9.25661C13.5875 7.36324 12.0308 5.82424 10.1157 5.82424C9.9279 5.82424 9.77427 5.97612 9.77427 6.16174C9.77427 6.35074 9.9279 6.49924 10.1157 6.49924C11.6553 6.49924 12.9047 7.73786 12.9047 9.25661ZM10.1157 1.69998C9.9279 1.69998 9.77427 1.85186 9.77427 2.03748C9.77427 2.22312 9.9279 2.37498 10.1157 2.37498C13.9562 2.37498 17.0798 5.46312 17.0798 9.25661C17.0798 9.44223 17.23 9.59411 17.4212 9.59411C17.6089 9.59411 17.7626 9.44223 17.7626 9.25661C17.7626 5.0885 14.3317 1.69998 10.1157 1.69998ZM13.4509 12.8139L13.0037 13.0535C12.2493 13.4619 11.6622 14.5812 10.7312 13.7375L8.30011 11.3L6.20004 9.25661C5.14495 7.92348 6.32635 7.60623 6.73941 6.85699L6.98179 6.41825C7.25489 5.91873 7.35388 5.35849 7.27196 4.79823C7.19345 4.23799 6.93741 3.72836 6.52775 3.32336C6.02935 2.83062 5.36707 2.56062 4.66042 2.56062C3.95376 2.56062 3.28807 2.83062 2.78964 3.32336L2.61556 3.49886C1.69383 4.41012 1.588 5.97948 2.31514 7.92348C3.0013 9.77973 4.3839 11.7912 6.20004 13.5867C8.96862 16.3239 12.0513 17.9 14.2634 17.9C15.1373 17.9 15.8781 17.6536 16.4039 17.1339L16.5814 16.9584C17.0764 16.469 17.3529 15.8142 17.3563 15.1089C17.3529 14.4204 17.0695 13.7454 16.5814 13.2627C15.7587 12.4494 14.4717 12.2671 13.4509 12.8139Z" />
-                  </svg>
-                </a>
-              </li>
-              <li class="icon-list__item">
-                <a class="icon-list__link icon">
-                  <svg class="icon icon--dark-blue icon--dark-background" width="17" height="14" viewBox="0 0 17 14"
-                    xmlns="http://www.w3.org/2000/svg">
-                    <path
-                      d="M1.0166 2.32528L7.7666 6.55572C7.9934 6.69747 8.2868 6.76467 8.582 6.76467C8.8772 6.76467 9.1706 6.69747 9.3974 6.55572L16.1474 2.32528C16.5875 2.04913 17.0033 0.974976 16.196 0.974976H0.968901C0.161601 0.974976 0.577401 2.04913 1.0166 2.32528ZM16.3517 4.63842L9.3974 8.86677C9.0914 9.05367 8.8772 9.07572 8.582 9.07572C8.2868 9.07572 8.0726 9.05367 7.7666 8.86677C7.4606 8.67987 1.3469 4.94082 0.847401 4.63737C0.496401 4.42317 0.500001 4.67412 0.500001 4.86732V12.525C0.500001 12.966 1.0094 13.575 1.4 13.575H15.8C16.1906 13.575 16.7 12.966 16.7 12.525V4.86837C16.7 4.67517 16.7036 4.42422 16.3517 4.63842Z" />
-                  </svg>
-                </a>
-              </li>
-            </ul>
-            <a class="promo__authorization button" href="authorization.html">
-              <span class="text button__caption">АВТОРИЗАЦИЯ</span>
-            </a>
-          </div>
           <div class="promo__quote">
             <img class="promo__traveller-icon" src="img/traveller-illustration.png" alt="Путешественник">
             <img class="promo__traveller-icon__large" src="img/traveller-illustration-large.png" alt="Путешественник">
@@ -151,24 +153,53 @@
             </blockquote>
           </div>
         </header>
-        <ul class="promo__list promo__list--indent information-list">
-          <li class="information-list__item information-list__item--dark-theme">
-            <span class="text information-list__description">Выберите направление</span>
-            <span>1</span>
-          </li>
-          <li class="information-list__item information-list__item--middle-theme">
-            <span class="text information-list__description">Изучите идеи путешественников</span>
-            <span>2</span>
-          </li>
-          <li class="information-list__item information-list__item--light-theme">
-            <span class="text information-list__description">Находите тех, кто похож на вас</span>
-            <span>3</span>
-          </li>
-          <li class="information-list__item information-list__item--even-lighter-theme">
-            <span class="text information-list__description">Путешествуйте вместе!</span>
-            <span>4</span>
-          </li>
-        </ul>
+        <div class="promo__actions">
+          <ul class="promo__list icon-list">
+            <li class="icon-list__item">
+              <a class="icon-list__link">
+                <svg class="icon icon--dark-blue icon--middle-background" width="19" height="19" viewBox="0 0 19 19"
+                  xmlns="http://www.w3.org/2000/svg">
+                  <path
+                    d="M9.77429 8.22389C9.77429 8.41289 9.92792 8.56139 10.1157 8.56139C10.5048 8.56139 10.8189 8.87526 10.8189 9.25664C10.8189 9.44226 10.9725 9.59414 11.1603 9.59414C11.348 9.59414 11.5017 9.44226 11.5017 9.25664C11.5017 8.50064 10.8804 7.88639 10.1157 7.88639C9.92792 7.88639 9.77429 8.03827 9.77429 8.22389ZM15.332 9.59414C15.5231 9.59414 15.6733 9.44226 15.6733 9.25664C15.6733 6.22589 13.1813 3.76215 10.1157 3.76215C9.92792 3.76215 9.77429 3.914 9.77429 4.09965C9.77429 4.28527 9.92792 4.43715 10.1157 4.43715C12.8057 4.43715 14.9906 6.60051 14.9906 9.25664C14.9906 9.44226 15.1442 9.59414 15.332 9.59414Z" />
+                  <path
+                    d="M12.9047 9.25661C12.9047 9.44223 13.0583 9.59411 13.2461 9.59411C13.4339 9.59411 13.5875 9.44223 13.5875 9.25661C13.5875 7.36324 12.0308 5.82424 10.1157 5.82424C9.9279 5.82424 9.77427 5.97612 9.77427 6.16174C9.77427 6.35074 9.9279 6.49924 10.1157 6.49924C11.6553 6.49924 12.9047 7.73786 12.9047 9.25661ZM10.1157 1.69998C9.9279 1.69998 9.77427 1.85186 9.77427 2.03748C9.77427 2.22312 9.9279 2.37498 10.1157 2.37498C13.9562 2.37498 17.0798 5.46312 17.0798 9.25661C17.0798 9.44223 17.23 9.59411 17.4212 9.59411C17.6089 9.59411 17.7626 9.44223 17.7626 9.25661C17.7626 5.0885 14.3317 1.69998 10.1157 1.69998ZM13.4509 12.8139L13.0037 13.0535C12.2493 13.4619 11.6622 14.5812 10.7312 13.7375L8.30011 11.3L6.20004 9.25661C5.14495 7.92348 6.32635 7.60623 6.73941 6.85699L6.98179 6.41825C7.25489 5.91873 7.35388 5.35849 7.27196 4.79823C7.19345 4.23799 6.93741 3.72836 6.52775 3.32336C6.02935 2.83062 5.36707 2.56062 4.66042 2.56062C3.95376 2.56062 3.28807 2.83062 2.78964 3.32336L2.61556 3.49886C1.69383 4.41012 1.588 5.97948 2.31514 7.92348C3.0013 9.77973 4.3839 11.7912 6.20004 13.5867C8.96862 16.3239 12.0513 17.9 14.2634 17.9C15.1373 17.9 15.8781 17.6536 16.4039 17.1339L16.5814 16.9584C17.0764 16.469 17.3529 15.8142 17.3563 15.1089C17.3529 14.4204 17.0695 13.7454 16.5814 13.2627C15.7587 12.4494 14.4717 12.2671 13.4509 12.8139Z" />
+                </svg>
+              </a>
+            </li>
+            <li class="icon-list__item">
+              <a class="icon-list__link icon">
+                <svg class="icon icon--dark-blue icon--dark-background" width="17" height="14" viewBox="0 0 17 14"
+                  xmlns="http://www.w3.org/2000/svg">
+                  <path
+                    d="M1.0166 2.32528L7.7666 6.55572C7.9934 6.69747 8.2868 6.76467 8.582 6.76467C8.8772 6.76467 9.1706 6.69747 9.3974 6.55572L16.1474 2.32528C16.5875 2.04913 17.0033 0.974976 16.196 0.974976H0.968901C0.161601 0.974976 0.577401 2.04913 1.0166 2.32528ZM16.3517 4.63842L9.3974 8.86677C9.0914 9.05367 8.8772 9.07572 8.582 9.07572C8.2868 9.07572 8.0726 9.05367 7.7666 8.86677C7.4606 8.67987 1.3469 4.94082 0.847401 4.63737C0.496401 4.42317 0.500001 4.67412 0.500001 4.86732V12.525C0.500001 12.966 1.0094 13.575 1.4 13.575H15.8C16.1906 13.575 16.7 12.966 16.7 12.525V4.86837C16.7 4.67517 16.7036 4.42422 16.3517 4.63842Z" />
+                </svg>
+              </a>
+            </li>
+          </ul>
+          <a class="promo__authorization button" href="authorization.html">
+            <span class="text button__caption">АВТОРИЗАЦИЯ</span>
+          </a>
+        </div>
+        <div>
+          <ul class="promo__list promo__list--indent information-list">
+            <li class="information-list__item information-list__item--dark-theme">
+              <span class="text information-list__description">Выберите направление</span>
+              <span>1</span>
+            </li>
+            <li class="information-list__item information-list__item--middle-theme">
+              <span class="text information-list__description">Изучите идеи путешественников</span>
+              <span>2</span>
+            </li>
+            <li class="information-list__item information-list__item--light-theme">
+              <span class="text information-list__description">Находите тех, кто похож на вас</span>
+              <span>3</span>
+            </li>
+            <li class="information-list__item information-list__item--even-lighter-theme">
+              <span class="text information-list__description">Путешествуйте вместе!</span>
+              <span>4</span>
+            </li>
+          </ul>
+        </div>
       </div>
     </section>
     <section class="about">
